- Fixed authz and tx issues with user preferences
- Fixed issue with LocalizedEntityField because the code was still looking
  for the basic entity name and not the full entity name
- Fixed issue with parsing locale from the database to include separate
  language and country codes (was ignoring the country)
- Fixed bug on ServiceRun screen where parameters were not getting passed

===========================================================================
Release 1.1.1 - 22 Sep 2012
===========================================================================

The 1.1.1 release of Moqui Framework is primarily a bug fix release. While
a few issues have been fixed the most important one for those just trying
Moqui is the explicit sorting of files by name during data loading which
addresses an issue on Linux servers where the files in a directory listing
through the Java File API can come back in any order.

Minor new features include DB configured User Fields on entities, host name
based tenant selection, and an easier way to specify default themes.

This release includes:

- User Field support for transparent user-defined fields with a definition
  in the database (using the UserField entity) and values for the fields
  isolated to groups of users stored in a separate table (using the
  UserFieldValue entity)
- Option to specify a default tenantId for a given host name
  (request.getServerName()) in the database, using the TenantHostDefault
  entity for deployment of tenants with a virtual host approach
- Can now specify the default screenThemeId for a ScreenThemeType
  Enumeration record using the Enumeration.enumCode field

Bug Fixes:

- fixed data file load order to explicitly sort files in data directories
  alpha-numerically; on some systems this is the way they came back in
  directory listings but not all, causing inconsistent behavior without
  this explicit sorting (symptom is FK errors in data load)